--- a/app/src/main/res/layout/activity_style3.xml
+++ b/app/src/main/res/layout/activity_style3.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -24,35 +23,27 @@
             style="@style/Custom.TabRadioButton"
             android:checked="true"
             android:drawableTop="@drawable/tab_sign_selector"
-            android:text="今日" />
+            android:text="首页" />
 
         <RadioButton
             android:id="@+id/record_tab"
             style="@style/Custom.TabRadioButton"
             android:drawableTop="@drawable/tab_record_selector"
-            android:text="记录" />
+            android:text="订单" />
 
-        <View style="@style/Custom.TabRadioButton" />
 
         <RadioButton
             android:id="@+id/contact_tab"
             style="@style/Custom.TabRadioButton"
             android:drawableTop="@drawable/tab_contact_selector"
-            android:text="通讯录" />
+            android:text="购物车" />
 
         <RadioButton
             android:id="@+id/settings_tab"
             style="@style/Custom.TabRadioButton"
             android:drawableTop="@drawable/tab_setting_selector"
-            android:text="设置" />
+            android:text="我的" />
     </RadioGroup>
 
-    <ImageView
-        android:id="@+id/sign_iv"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:background="@android:color/transparent"
-        android:src="@mipmap/sign" />
+
 </RelativeLayout>
