--- a/app/src/main/res/layout/activity_login_note.xml
+++ b/app/src/main/res/layout/activity_login_note.xml
@@ -141,7 +141,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/tv_verificationode"
+                android:id="@+id/tv_verificationcode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
@@ -174,6 +174,7 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/tv_register"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="注册"
@@ -185,6 +186,7 @@
                 android:layout_weight="1" />
 
             <TextView
+                android:id="@+id/tv_password_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="密码登录"
@@ -193,6 +195,7 @@
         </LinearLayout>
 
         <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
+           android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="45dp"
             android:layout_gravity="center"
