--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -85,13 +85,22 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/tv_verificationode"
+                android:id="@+id/et_verificationcode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
                 android:hint="请输入验证码" />
 
+            <View
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:layout_weight="1" />
 
+            <TextView
+                android:id="@+id/tv_get_verification_code"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="获取验证码" />
 
         </LinearLayout>
 
@@ -108,6 +117,7 @@
             android:orientation="horizontal">
 
             <EditText
+                android:id="@+id/et_input_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@null"
